assets/css/style.css
:root {
    /* Global variables */
    --accent: #f5e97a;
    --accent-dim: #f5e97a33;
    /* --bg: #0f0f13;
    --bg-2: #1a1a1f;
    --bg-3: #212129;
    --muted: #9a9ab0; */
}

@font-face {
    font-family: "vive-la-vie";
    src: url(Henry-Wauzivuff-Personal-Website\assets\fonts\ViveLaVieV1-Regular.otf) format("opentype");
}

.vive-la-vie-font {
    font-family: 'vive-la-vie';
}

/* @import url('https://fonts.googleapis.com/css2?family=Faculty+Glyphic&family=Freehand&family=Playwrite+NZ+Guides&display=swap'); */
.faculty-glyphic-regular {
  font-family: "Faculty Glyphic";
  font-weight: 400;
  font-style: normal;
}

@font-face {
    font-family: "Faculty Glyphic";
    src: url(Henry-Wauzivuff-Personal-Website\assets\fonts\FacultyGlyphic-Regular.ttf);
}

/*Navbar logo*/
#nav-icon {
    width: 100px;
    margin-right: 1rem;
    /*align-self: center;*/
}


/*The Big Navigation Bar At The Top Of The Website*/
.global-navbar {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
    
    display: flex;
    align-items: flex-start;

    padding: 1rem 1rem 2rem;
    background-color: #222327; /*or #1d1e1e*/
    width: 100%;
    
    color: #abb0bb;
    box-sizing: border-box;

    /* font-family: vive-la-vie; */
    font-family: "Faculty Glyphic", sans-serif;

}

.navbar-right {
    display: flex;
    flex-direction: column;
}

.global-title {
    margin: 0 0 0.5rem 0;
    display: flex;
    font-size: 2rem;
}

.navbar-links {
    display: flex;
    gap: 1.5rem;
    flex-wrap: wrap;
    list-style: none;
    padding: 0;
    margin: 0;
}

.navbar-links a {
    color: aliceblue;
    text-decoration: none;
    font-weight: 100;
}

.navbar-links a:hover {
    color: snow;
    text-decoration: underline;
}


header {
    /*margin-top: 150px;*/
    background-color: /*#27282c*/ #292a30;
    background-size: cover;
    /*background-image: url("assets/Henry Wauzivuff Logo.png")*/;
   
    line-height: 2rem;
    min-width: 100%;

    padding-top: 1rem;
    padding-bottom: 5rem;

    text-align: justify;
}

h2 {
    text-decoration: underline;
}

hr {
    margin: 1.5rem 0;
    color: inherit;
    background-color: currentColor;
    border: 100;
    opacity: 0.25;
    width: 25%;
    
}

li {
    line-height: 2rem;
    text-align: justify;
}

a:link {
    color: aliceblue;
    
}


section {
    margin-top: 50px;
    margin-bottom: 25%;
    max-width: fit-content;
    scroll-margin-top: 200px;
}


#home {
    /* From here below is for the home */
    display: flex;
    align-items: center;
    align-content: center;
    flex-wrap: nowrap; /* <-This fixes the layout?? Max had it though?? */
    justify-content: center;
    row-gap: 2rem;
    /* height: 100vh; <- why did this even exist */
    min-height: fit-content;
    width: 100%;
    padding: 0 3rem;
    box-sizing: border-box;
    position: relative;

    margin-top: 6rem;
    margin-bottom: 6rem;
    border-radius: 1vh;
}

/* Profile pic with subtle glow + hover */
.pfp {
    height: 250px;
    /* border-radius: 2rem; */
    box-shadow:
        0 0 0 1px #ffffff1a,
        0 10px 40px -10px #f5e97a33,
        0 20px 60px -20px #00000080;
    transition: transform 0.4s cubic-bezier(0.2, 0.8, 0.2, 1), box-shadow 0.4s ease;
}

.pfp:hover {
    transform: translateY(-4px); /**/
    box-shadow:
        0 0 0 1px #ffffff22,
        0 14px 50px -10px #f5e97a55,
        0 24px 70px -20px #000000a0;
}

.profile-right {
    margin: 3rem;
}

.profile-right div {
    display: flex;
}

#about {
    display: flex;
    align-items: center;
    padding-left: 1rem;
    padding-right: 1rem;
    padding-bottom: 5rem;
    padding-top: 5rem;
    
    justify-content: center;

    padding: 5rem 1rem;

    box-sizing: border-box; 
    
}

.table-of-contents {
    
    /*background-color: #2c2d36;
    border: #2e303b;
    border-style: double;*/
    padding-left: 10rem;
    padding-right: 10rem;
    
    display: block;
    max-width: 600px;
    
    justify-content: center;
    margin-left: auto;
    margin-right: auto;
    
    box-sizing: border-box;

}

.projects-section {
    display: flex;
    justify-content: center;
    width: 100%;
}

/*debugging thing thanks jippity*/
/* * {
    outline: 1px solid red;
} */
 

.projects {
   margin-top: 5rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   overflow: hidden;
   justify-content: center;
   gap: 1.5rem;
}

.portrait {
    position: relative;
    z-index: inherit;
    display: flex;
    justify-content: center;
    background-color: #292a30;
    padding: 1rem;
    /*width: 100%;*/
    border-radius: 2rem 2rem 0 0;
}

.portrait img {
    width: fit-content;
    height: 150px;
    object-fit: cover;
}

.about-section-content #about div {
    line-height: 1.6;
    /*font-size: rem;*/
    width: 65%;
    max-width: 600px;    /* keeps text from getting too wide */
    flex-shrink: 0;
    word-wrap: break-word;
    flex: 0 0 auto;
}


 #projects div {
    line-height: 1.6;
    font-size: rem;
    width: 65%;
    max-width: 600px; /*keeps text from getting too wide*/
    flex-shrink: 0;
    word-wrap: break-word;
    flex: 0 0 auto;
} 


.project:hover {
    transform: transLateY(-6px);
    box-shadow: 
        0 14px 30px -14px #000000cc,
        0 0 1px var(--accent-dim), 0 0 24px
        -8px H var(--accent-dim);
        /* 0 0 0 1px #ffffff22,
        0 14px 50px -10px #f5e97a55,
        0 24px 70px -20px #000000a0; */
    border-color: #000000cc, var(--accent-dim);
}

.project {
    display: flex;
    flex-direction: column;
    border-radius: 1.25rem;
    overflow: hidden;
    border-width: 1px;
    border-style: solid;
    border-color: rgba(255, 255, 255, 0.06);
    border-image: initial;
    background: var(--bg-3);
    transition: transform 0.35s cubic-bezier(0.2, 0.8, 0.2, 1), box-shadow 0.35s, border-color 0.35s;
}

.project {
    width: 100%; /*30%;*/
    display: block;
    background-color: #292a30;
    
}

.projdesc { 
    /* position: relative;
    z-index: 1;
    background-color: var(--bg-3);
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    padding: 1.25rem 1.25rem 1.4rem;
    gap: 0.4rem; */

}


body {
    padding-top: 150px; /*navbar hack*/
    
    font-family: 'Faculty Glyphic', sans-serif;
    /* font-family: 'Courier New'; */
    
    display: flex;
    justify-content: center;
    
    flex-direction: column;
    align-items: center;
    
    text-align: center;
    height: auto;
    margin: 0;
    font-size: larger;

    background-color: /*#292a30*/ #27282c /*#27282c*/;
    color: #ffe4c4;
    /* color: #907B4C; */

    overflow-x: clip; /*What jippy recommended for my annoying navbaroverflow*/

}

html { scroll-behavior: smooth; }

main {
    width: 100%;
    max-width: 1000px;
    margin: 0 auto;   /* centers everything in main, fix broken adding main */
    padding: 0 1rem;
}

.global-footer {
    margin-top: 100px;

    background-color: #26272e6e;
    min-width: 100%;
    max-width: fit-content;
    min-height: 100%;
    color: aliceblue;
    align-items: center;
    text-align: center;
    margin: 0;
    /*padding: 10px 5%; fix horizontal scrollbar*/
    
}

